updated parsed appliances

--- a/demod/datasets/Germany/parsed_data/vBottaccioli/appliance_dict.json
+++ b/demod/datasets/Germany/parsed_data/vBottaccioli/appliance_dict.json
@@ -142,7 +142,7 @@
     false,
     true,
     false,
-    false,
+    true,
     true,
     true,
     true,
@@ -194,10 +194,10 @@
     true,
     true,
     true,
-    true,
-    true,
-    true,
-    true,
+    false,
+    false,
+    false,
+    false,
     true,
     true,
     true,
@@ -500,7 +500,7 @@
     0.00300396929072257,
     0.00616434270609193,
     0.00920800492615076,
-    0.0224930152146707,
+    0.0224930152146706,
     0.0170789128126585,
     0.0298198078880916,
     0.0314706781197294,
@@ -577,7 +577,7 @@
     0.0,
     0.0
   ],
-  "mandatory_previous_type": [
+  "previous_appliance_type": [
     NaN,
     NaN,
     NaN,
@@ -604,6 +604,40 @@
     NaN,
     NaN,
     "washingmachine",
+    NaN,
+    NaN,
+    NaN,
+    NaN,
+    NaN,
+    NaN
+  ],
+  "previous_activity": [
+    NaN,
+    NaN,
+    NaN,
+    NaN,
+    NaN,
+    NaN,
+    NaN,
+    NaN,
+    NaN,
+    NaN,
+    NaN,
+    NaN,
+    NaN,
+    NaN,
+    NaN,
+    NaN,
+    NaN,
+    NaN,
+    NaN,
+    NaN,
+    NaN,
+    NaN,
+    NaN,
+    NaN,
+    "dishwashing",
+    NaN,
     NaN,
     NaN,
     NaN,
