added one key to a column

--- a/demod/datasets/Germany/parsed_data/v0.1/appliance_dict.json
+++ b/demod/datasets/Germany/parsed_data/v0.1/appliance_dict.json
@@ -1,38 +1,4 @@
 {
-  "DemodAttributesNames": [
-    "Cold",
-    NaN,
-    NaN,
-    NaN,
-    "ConsumerElectronics+ICT",
-    NaN,
-    NaN,
-    NaN,
-    NaN,
-    NaN,
-    NaN,
-    NaN,
-    NaN,
-    NaN,
-    NaN,
-    NaN,
-    NaN,
-    NaN,
-    "Cooking",
-    NaN,
-    NaN,
-    NaN,
-    NaN,
-    NaN,
-    "Wet",
-    NaN,
-    NaN,
-    NaN,
-    NaN,
-    NaN,
-    NaN,
-    NaN
-  ],
   "name": [
     "FRIDGE1",
     "FRIDGE2",
@@ -440,6 +406,40 @@
     31.0,
     32.0460077712464,
     38.0
+  ],
+  "target_cycle_year": [
+    7617.94871794872,
+    7617.94871794872,
+    5045.45454545455,
+    5045.45454545455,
+    0.0,
+    35.4594692107746,
+    110.367597918536,
+    747.236551215918,
+    747.236551215918,
+    472.803129074316,
+    472.803129074316,
+    147.272727272727,
+    654.875958011368,
+    701.890637382543,
+    701.890637382543,
+    1464.26653737683,
+    1464.26653737686,
+    924.444444444445,
+    417.902007298679,
+    0.0,
+    24.0653471567703,
+    94.6193224072481,
+    1519.82286616642,
+    292.326224041056,
+    241.47639572683,
+    122.072915738278,
+    195.906595865544,
+    195.906595865545,
+    9.56521739130435,
+    13.4782608695652,
+    1.24692637242204,
+    0.518417462482947
   ],
   "switch_on_prob_crest": [
     0.0666891133557801,
