automatically download CREST data

--- a/.gitignore
+++ b/.gitignore
@@ -167,3 +167,4 @@ demod/datasets/GermanTOU/einleseroutinen/einleseroutine_sas_puf.sas
 demod/datasets/GermanTOU/einleseroutinen/einleseroutine_spss_puf.sps
 demod/datasets/GermanTOU/einleseroutinen/einleseroutine_stata_puf.do
 demod/datasets/tracebase/parsed_data/
+demod/datasets/CREST/parsed_data/
