--- a/.gitignore
+++ b/.gitignore
@@ -166,5 +166,8 @@ demod/datasets/GermanTOU/doku/zve_puf konzept.pdf
 demod/datasets/GermanTOU/einleseroutinen/einleseroutine_sas_puf.sas
 demod/datasets/GermanTOU/einleseroutinen/einleseroutine_spss_puf.sps
 demod/datasets/GermanTOU/einleseroutinen/einleseroutine_stata_puf.do
+
+# Automatically generated data should not go on github
 demod/datasets/tracebase/parsed_data/
 demod/datasets/CREST/parsed_data/
+demod/datasets/RenewablesNinja/parsed_data/
