adding information on how to procceed

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,21 @@
+# File used for pypi set up
+
+# Reference https://packaging.python.org/tutorials/packaging-projects/#uploading-your-project-to-pypi
+
+# To run the file, follow the instructions
+# 1. Change the version and make sure it is a newer version than the
+# precedently uploaded one.
+# 2. install/upgrade the libraries using pip
+#       pip install --upgrade pip build twine
+# 3. In the directory of this file, build the archive to be uploaded
+#       python3 -m build
+# 4. Upload using twine
+#       twine upload dist/*
+
 [metadata]
 name = demod
 version = 0.2
-author = EMatteo Barsanti, Lionel Constantin, HERUS, Ecole Polytechnique Fédérale de Lausanne
+author = Matteo Barsanti, Lionel Constantin, HERUS, Ecole Polytechnique Fédérale de Lausanne
 author_email = demod@groupes.epfl.ch
 description = Domestic Energy Demand Modelling Library
 long_description = file: README.md
