--- a/.gitignore
+++ b/.gitignore
@@ -146,7 +146,11 @@ CREST_data/.~lock*
 
 
 # raw datasets
-raw_data/
+demod/datasets/CREST/raw_data/
+demod/datasets/RenewablesNinja/raw_data/
+demod/datasets/tracebase/raw_data/
+demod/datasets/GermanTOU/raw_data/
+
 
 
 # local test enviroment
