added release line

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,6 +3,7 @@
 # Reference https://packaging.python.org/tutorials/packaging-projects/#uploading-your-project-to-pypi
 
 # To run the file, follow the instructions
+# 0. Create a github release
 # 1. Change the version and make sure it is a newer version than the
 # precedently uploaded one.
 # 2. install/upgrade the libraries using pip
