remove the json files from the build

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,6 +37,7 @@ classifiers =
     Topic :: Scientific/Engineering
 
 [options]
+install_package_data = false
 packages = demod
 python_requires = >=3.8
 install_requires =
