find packages changed

--- a/setup.cfg
+++ b/setup.cfg
@@ -38,11 +38,13 @@ classifiers =
 
 [options]
 install_package_data = false
-packages = demod
+package_dir =
+    =.
+packages = find:
+
 python_requires = >=3.8
 install_requires =
-    numpy==1.19
-    scipy==1.4
-    pandas==1.2
-    openpyxl==2.6
-    matplotlib==3.4
+    numpy>=1.19
+    scipy>=1.4
+    pandas>=1.2
+    matplotlib>=3.4
