adding licence and keywords

--- a/setup.cfg
+++ b/setup.cfg
@@ -21,7 +21,9 @@ author_email = demod@groupes.epfl.ch
 description = Domestic Energy Demand Modelling Library
 long_description = file: README.md
 long_description_content_type = text/markdown
+license = GNU General Public License v3 (GPLv3)
 url = https://github.com/epfl-herus/demod
+keywords = energy, demand, simulation, modelling, load, electricity, power, appliance, heating, household, DSM, dataset
 project_urls =
     Documentation = https://demod.readthedocs.io/
 classifiers =
