--- a/setup.cfg
+++ b/setup.cfg
@@ -15,7 +15,7 @@
 
 [metadata]
 name = demod
-version = 0.2
+version = 0.2-1
 author = Matteo Barsanti, Lionel Constantin, HERUS, Ecole Polytechnique Fédérale de Lausanne
 author_email = demod@groupes.epfl.ch
 description = Domestic Energy Demand Modelling Library
